Add function to fill out nodes in the board

--- a/ConnectFour-in-JS/Pages/Index.cshtml
+++ b/ConnectFour-in-JS/Pages/Index.cshtml
@@ -10,8 +10,8 @@
 <div id="board">
     @for (int column = 0; column < 7; column++)
     {
-        <div class="column" id="@column">
-            <button class="column btn btn-light">Drop Here</button>
+        <div class="column">
+            <button class="column btn btn-light" id="@column">Drop Here</button>
             @for (int row = 0; row < 6; row++)
             {
                 <div class="row" id="col@(column)row@(row)"></div>
