--- a/ConnectFour-in-JS/wwwroot/css/site.css
+++ b/ConnectFour-in-JS/wwwroot/css/site.css
@@ -82,6 +82,13 @@ body {
     width: 60px;
     height: 60px;
     border: 2px solid #5b0a0a;
-    background-color: #ffffff;
     border-radius: 50%;
+}
+
+.player-one{
+    background-color: #0a0101;
+}
+
+.player-two{
+    background-color: #a9f121;
 }
