--- a/ConnectFour-in-JS/Pages/Index.cshtml
+++ b/ConnectFour-in-JS/Pages/Index.cshtml
@@ -5,7 +5,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Connect 4</h1>
+    <h1 class="display-3">Connect 4</h1>
+    <h1 class="display-4">Player 1</h1>
 </div>
 <div id="board">
     @for (int column = 0; column < 7; column++)
