Add reset button, and other UI enhancements

--- a/ConnectFour-in-JS/Pages/Index.cshtml
+++ b/ConnectFour-in-JS/Pages/Index.cshtml
@@ -18,6 +18,8 @@
                 <div class="row" id="col@(column)row@(row)"></div>
             }
         </div>
-    }
+    }   
 </div>
-
+<div id="reset">
+    <button class="btn btn-light" >Reset Game</button>
+</div>
