Make slightly responsive for mobile

--- a/ConnectFour-in-JS/Pages/Index.cshtml
+++ b/ConnectFour-in-JS/Pages/Index.cshtml
@@ -12,7 +12,7 @@
     @for (int column = 0; column < 7; column++)
     {
         <div class="column">
-            <button class="column btn btn-light" id="@column">Disc Here</button>
+            <button class="column btn btn-light" id="@column">Drop Disc</button>
             @for (int row = 0; row < 6; row++)
             {
                 <div class="row" id="col@(column)row@(row)"></div>
