--- a/ConnectFour-in-JS/wwwroot/css/site.css
+++ b/ConnectFour-in-JS/wwwroot/css/site.css
@@ -102,13 +102,25 @@ body {
     width: 80%;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 320px) {
+    
+    #board{
+        height:100%;
+        width:100%;
+    }
+
     .row {
         height: 40px;
     }
 }
 
 @media (min-width: 992px){
+
+    #board {
+        height: 80%;
+        width: 80%;
+    }
+
     .row{
         height:60px;
     }
